bugs squashed

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -43,7 +43,7 @@ section {
             border-radius: 50%;
             transition: 0.2s linear;
             line-height: 55px;
-            margin-top: 18px;
+            margin-top: 5px;
             margin-right: 5px;
                 &:hover {
                     transform: scale(1.3);
@@ -85,18 +85,19 @@ header  {
 .card-img {
     height: 35px;
     width: 35px;
-    display: block;
+    display: inline-block;
     border-radius: 50%;
     background-color: #9F9999;
-    float: left;
+    margin-right: 5px;
 }
 
 .card-title {
-    display: block;
+    display: inline-flex;
     margin-top: 0;
     margin-bottom: 0;
         h1 {
-            padding-left: 45px;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 }
 
@@ -107,7 +108,7 @@ header  {
 .card-lang {
     padding: 5px;
     position: relative;
-    display: inline-block;
+    display: inline-flex;
     background-color: #E8CB58;
     margin-bottom: 10px;
     height: auto;
@@ -116,6 +117,16 @@ header  {
 
 .card-footer {
     border-top: 1px solid #e0e0e0;
+    // font-size: 35px;
+        i {
+            margin-top: 10px;
+            font-size: 35px;
+            transition: 0.2s linear;
+            color: black;
+                &:hover {
+                    transform: scale(1.3);
+                }
+        }
 }
 
 .footer-img {
@@ -124,4 +135,45 @@ header  {
     max-width: 50px; 
     max-height: 50px;
     padding-top: 10px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn {
+    position: relative;
+    display: block;
+    color: black;
+    font-size: 14px;
+    margin: 10px 0;
+    border: 2px solid #F9F6F6;
+    padding: 16px 60px;
+    overflow: hidden;
+    transition: 1s all ease;
+    border-radius: 30px;
+        &::before {
+            background-color: #F9F6F6;
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            z-index: -1;
+            transition: all 0.6s ease;
+        }
+        
+        // a {
+        //     text-decoration: none;
+        // }
+}
+
+.btn1::before {
+    width: 100%;
+    height: 0;
+    transform: translate(-50%,-50%) rotate(-45deg);
+}
+
+.btn1:hover::before {
+    height: 1100%;
 }
